--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
           Turns tiny playlists into awfully long ones<br>
         </p>
 
-        <a href="#" class="button">Sign in with Spotify</a>
+        <a id="login-btn" href="#" class="button">Sign in with Spotify</a>
       </div>
 
       <div id="app-loggedin">
-
+        <p>
+          Helloooooo!!!
+        </p>
       </div>
 
     </div>
+
+    <script type="text/javascript">
+      window.Plautocompleter = {};
+    </script>
+
+    <script type="text/javascript" src="scripts/vendor/jquery.js"></script>
+    <script type="text/javascript" src="scripts/plautocompleter/main.js"></script>
+    <script type="text/javascript" src="scripts/plautocompleter/login.js"></script>
   </body>
 </html>
