Added login functionality.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Playlist autocompletion made easy<br>
           Turns tiny playlists into exceptionally long ones<br>
         </p>
-        <a href="#" class="button">Sign in with Spotify</a>
+        <a id="login-btn" href="#" class="button">Sign in with Spotify</a>
       </div>
 
       <div id="app-playlists">
