Proper working playlist fetching

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Playlist autocompletion made easy<br>
           Turns tiny playlists into exceptionally long ones<br>
         </p>
-        <a id="login-btn" href="#" class="button">Sign in with Spotify</a>
+        <a id="login" href="#" class="button">Sign in with Spotify</a>
       </div>
 
       <div id="app-playlists">
@@ -48,14 +48,9 @@
 
     <script type="text/javascript" src="scripts/vendor/jquery.js"></script>
     <script type="text/javascript" src="scripts/vendor/handlebars.js"></script>
-    <!--<script type="text/javascript" src="scripts/plautocompleter/main.js"></script>
-    <script type="text/javascript" src="scripts/plautocompleter/login.js"></script>-->
+    <script type="text/javascript" src="scripts/plautocompleter/main.js"></script>
+    <script type="text/javascript" src="scripts/plautocompleter/login.js"></script>
     <script type="text/javascript" src="scripts/plautocompleter/playlists.js"></script>
-
-    <script>
-      window.Plautocompleter.Playlists.initialize($("#playlists"));
-      window.Plautocompleter.Playlists.fetch();
-    </script>
 
   </body>
 </html>
