--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
           </li>
         {{/each}}
       </ol>
+
+      <div class="actions">
+        <a id="save" href="#" class="button">Save to Spotify</a>
+      </div>
     </script>
 
     <script type="text/javascript">
