--- a/static/index.html
+++ b/static/index.html
@@ -58,8 +58,8 @@
       <ol id="playlist">
         {{#each tracks}}
           <li>
-            {{name}}
-            <a href="#"><span class="destroy">Destroy</span></a>
+            {{name}} <i>by</i> {{artist}}
+            <a href="#"><span class="destroy">No thanks</span></a>
           </li>
         {{/each}}
       </ol>
