--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <ol id="playlist" data-playlist-id="{{id}}">
         {{#each tracks}}
-          <li data-track-id="{{id}}">
+          <li data-track-uri="{{uri}}">
             {{name}}
             <a href="#"><span class="destroy">Destroy</span></a>
           </li>
