Cancel button in playlist

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,7 @@
 
       <div class="actions">
         <a id="save" href="#" class="button">Save to Spotify</a>
+        <a id="back" href="#">or cancel</a>
       </div>
     </script>
 
