Redirect after saving

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
       <div id="app-login">
         <p>
           Playlist autocompletion made easy<br>
-          Turns tiny playlists into exceptionally long ones<br>
+          Turns tiny playlists into slightly longer ones<br>
         </p>
         <a id="login" href="#" class="button">Sign in with Spotify</a>
       </div>
